2001-04-29  Martin Baulig  <baulig@suse.de>

	Temporarily remove GnomeMDI from the build so that we can
	get rid of gnome-app.[ch] and gnome-app-helper.[ch].

	As a weekend hack project, someone needs to make GnomeMDI
	use the Bonobo UI code; contact me if you want to work on
	this, I can help you with it and I may even have some
	experimental code on my hard disk.

	* Makefile.am (libgnomeui_2_la_SOURCES): Removed gnome-mdi.c,
	gnome-mdiP.h, gnome-mdi-child.c, gnome-mdi-session.c,
	gnome-pouch.c, gnome-roo.c.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-preferences.[ch]: Removed. This is now in libgnome
	and using bonobo-conf.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-canvas-init.c (libgnomecanvas_pre_args_parse):
	There is no libgnomecanvas_init() function anymore.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-mdi.[ch]: Made this a GObject, not a GtkObject.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.c, gnome-druid.c, gnome-font-picker.c,
	gnome-helpsys.c: Use the GTK+ API to access our stock icons.

	* gnome-stock-icons.h: New file; provide #defines for all
	our stock ids.

	* gnome-init.c (libgnomeui_post_args_parse): Call
	init_gnome_stock_icons().

	* gnome-stock.[ch], gnome-stock-ids.[ch]: Removed.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-textfu.c (gnome_textfu_parse): Use stat(), not fstat();
	[FIXME: for some strange reason, fstat() is an undefined symbol
	on my system.]

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-stock-icons.c: New file; we'll most likely move all
	the icons from the pixmaps/ directory into GTK+ very soon,
	this file is the first step in this direction.
	(init_gnome_stock_icons): This function puts all our icons into
	a new GtkIconFactory and gtk_icon_factory_add_default()s it.

	* gnome-stock-ids.h (GNOME_ICON_SIZE_TOOLBAR): New icon size.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.c: Use GtkImageMenuItem, not GtkPixmapMenuItem.
